[package]
name = "bench_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
arrow2 = "0.18.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_channel"
harness = false

[[bench]]
name = "bench_arrow"
harness = false
